force-app/main/default/objects/Lead/fields/Account_Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Account_Created_from_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente creado</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos1</relationshipName>
    <type>Lookup</type>
</CustomField>