force-app/main/default/objects/Lead/fields/Cuenta_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Candidatos</relationshipLabel>
    <relationshipName>Candidatos</relationshipName>
    <type>Lookup</type>
</CustomField>