force-app/main/default/objects/Lead/fields/Detalle_de_error__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_error__c</fullName>
    <label>Detalle de error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>