force-app/main/default/objects/Lead/fields/Document_number__c.field-meta.xml
<CustomField>
    <fullName>Document_number__c</fullName>
    <label>Numero de documento</label>
    <type>TextArea</type>
</CustomField>