force-app/main/default/objects/Lead/fields/Fecha_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimiento__c</fullName>
    <description>Almacenará la información de la fecha de nacimiento del cliente</description>
    <label>Fecha de nacimiento</label>
    <type>Date</type>
</CustomField>