force-app/main/default/objects/Lead/fields/Id_Externo__c.field-meta.xml
<CustomField>
    <fullName>Id_Externo__c</fullName>
    <description>Id Externo del Lead</description>
    <externalId>true</externalId>
    <label>Número de lead Lite</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>