force-app/main/default/objects/Lead/fields/isDniVerified__c.field-meta.xml
<CustomField>
    <fullName>isDniVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DNI verificado</label>
    <type>Checkbox</type>
</CustomField>