force-app/main/default/objects/Lead/fields/Motivo_de_error__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_error__c</fullName>
    <label>Motivo de error</label>
    <type>TextArea</type>
</CustomField>