force-app/main/default/objects/Lead/fields/Segundo_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Segundo_Apellido__c</fullName>
    <label>Segundo Apellido</label>
    <length>25</length>
    <type>Text</type>
</CustomField>