force-app/main/default/objects/Lead/fields/Type_document__c.field-meta.xml
<CustomField>
    <fullName>Type_document__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIF</fullName>
                <default>true</default>
                <label>NIF</label>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>