force-app/main/default/objects/Lead/fields/Vindicia_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Vindicia_Account_Id__c</fullName>
    <label>Identificador cliente Vindicia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>