force-app/main/default/objects/Lead/listViews/Candidatos_de_hoy.listView-meta.xml
<ListView>
    <fullName>Candidatos_de_hoy</fullName>
    <columns>FULL_NAME</columns>
    <columns>DNI__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>Segundo_Apellido__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Candidatos Movistar + Lite de hoy</label>
</ListView>